# Health-Insights-AI-Assistance

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/agents/compliance/: compliance.py
backend/agents/document_processing/: clinical_analysis.py  document_parser.py  insight_summary.py  insights_summary.py  pii_removal.py  risk_assessment.py
backend/agents/document_processing/agent/: clinical_analysis.py  insights_summary.py  risk_assessment.py
backend/agents/followup/: followup.py
backend/agents/guardrail/: input_guardrail.py
backend/agents/orchestrator/: orchestrator.py
backend/agents/qna/: qna.py
backend/api/models/: responses.py
backend/api/routes/: chat.py  followup.py  health.py
backend/app/: graph_state.py  nodes.py  state.py
backend/config/: settings.py
backend/core/: context_builder.py  file_validators.py  prompt_loader.py  session.py
backend/prompts/clinical_analysis/v1.0/: analysis.txt  config.yaml  prompts.json
backend/prompts/clinical_analysis/v1.1/: analysis.txt  config.yaml
backend/prompts/compliance/v1.0/: compliance.txt  config.yaml
backend/prompts/compliance/v1.1/: compliance.txt  config.yaml
backend/prompts/followup/v1.0/: prompts.json
backend/prompts/input_guardrail/v1.0/: classification.txt  config.yaml
backend/prompts/input_guardrail/v1.1/: classification.txt  config.yaml
backend/prompts/insight_summary/v1.0/: config.yaml  prompts.json
backend/tests/: conftest.py
backend/tests/SIT/: test_api.py  test_chat_integration.py  test_health.py
backend/tests/unit/: test_clinical_analysis.py  test_compliance.py  test_document_parser.py  test_input_guardrail.py  test_insights_summary.py  test_orchestrator.py  test_pii_removal.py  test_qna.py  test_risk_assessment.py
(+51 files in other folders)
