[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "grandalf>=0.8",
    "langchain-openai>=1.1.9",
    "langfuse>=4.0.1",
    "langgraph>=1.0.10",
    "pip>=26.0.1",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.1.1",
    "spacy>=3.8.11",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 88
exclude = ["tests/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
